--- a/Index.html
+++ b/Index.html
@@ -2,46 +2,16 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-body {
-  margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
-}
 
-.topnav {
-  overflow: hidden;
-  background-color: #333;
-}
+<link rel="stylesheet" href="StyleSheet.css">
 
-.topnav a {
-  float: left;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
-}
-
-.topnav a:hover {
-  background-color: #ddd;
-  color: black;
-}
-
-.topnav a.active {
-  background-color: #04AA6D;
-  color: white;
-}
-
-
-
-</style>
 </head>
-<body background="wallpaaper.jpg">
+<body >
 <div class="topnav">
-  <a class="active" href="#home">Home</a>
-  <a href="#news">News</a>
-  <a href="#contact">Contact</a>
-  <a href="#about">About</a>
+  <a class="active" href="#home">View Vaccine Appointments</a>
+  <a href="#news">Request Appointment</a>
+  <a href="#contact">Add Vaccine Stock</a>
+  <a href="#about">Contact</a>
 </div>
 
 <div style="padding-left:16px">
