--- a/Index.html
+++ b/Index.html
@@ -3,7 +3,7 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<link rel="stylesheet" href="StyleSheet.css">
+<link rel="stylesheet" href="public/StyleSheet.css">
 
 </head>
 <body >
