--- a/code/Index.html
+++ b/code/Index.html
@@ -3,22 +3,25 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<link rel="stylesheet" href="public/StyleSheet.css">
+<link rel="stylesheet" href="StyleSheet.css">
 
 </head>
 <body >
 <div class="topnav">
   <a class="active" href="#home">View Vaccine Appointments</a>
   <a href="#news">Request Appointment</a>
-  <a href="#contact">Add Vaccine Stock</a>
+  <a href="addStock.html">Add Vaccine Stock</a>
   <a href="#about">Contact</a>
 </div>
 
 <div style="padding-left:16px">
   <h2 style="color:white;">Vaccine Tracking</h2>
-  <p style="color:white;" >21.1% of the world population has received at least one dose of a COVID-19 vaccine.
+  <div class="writing">
+  <p ">21.1% of the world population has received at least one dose of a COVID-19 vaccine.
 2.5 billion doses have been administered globally, and 35.1 million are now administered each day.
 Only 0.8% of people in low-income countries have received at least one dose.</p>
+</div>
+
 </div>
 
 </body>
