--- a/code/Index.html
+++ b/code/Index.html
@@ -9,7 +9,7 @@
 <body >
 <div class="topnav">
   <a class="active" href="#home">View Vaccine Appointments</a>
-  <a href="#news">Request Appointment</a>
+  <a href="ReqApp">Request Appointment</a>
   <a href="addStock.html">Add Vaccine Stock</a>
   <a href="#about">Contact</a>
 </div>
