--- a/code/ReqApp.html
+++ b/code/ReqApp.html
@@ -6,7 +6,7 @@
     <link href='https://fonts.googleapis.com/css?family=Nunito:400,300' rel='stylesheet' type='text/css'>
 <body>
 
-  <form action="index.html" method="post">
+  <form action="/ReqPost" method="post">
   
     <h1>Request Appointment</h1>
     
