--- a/code/addStock.html
+++ b/code/addStock.html
@@ -8,7 +8,7 @@
     </head>
     <body>
 
-      <form action="index.html" method="post">
+      <form action="/addStock" method="post">
       
         <h1>Add Stock</h1>
         
