--- a/code/Index.html
+++ b/code/Index.html
@@ -21,7 +21,7 @@
 <div style="padding-left:16px">
   <h2 style="color:white;">Vaccine Tracking</h2>
   <div class="writing">
-  <p ">21.1% of the world population has received at least one dose of a COVID-19 vaccine.
+  <p >21.1% of the world population has received at least one dose of a COVID-19 vaccine.
 2.5 billion doses have been administered globally, and 35.1 million are now administered each day.
 Only 0.8% of people in low-income countries have received at least one dose.</p>
 </div>
