--- a/code/addStock.html
+++ b/code/addStock.html
@@ -19,10 +19,10 @@
         <fieldset>
         <label for="job">Vaccine Centre ID:</label>
         <select id="job" name="user_job">
-         <option value="secretary">1</option>
-            <option value="maintenance">2</option>
-            <option value="secretary">3</option>
-            <option value="maintenance">4</option>
+         <option value="1">1</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
             
         </select>
         
